--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ South==0.7.6
 coverage==3.5.3
 dj-database-url==0.2.1
 django-debug-toolbar==0.9.4
+django-discover-runner==0.2.2
 django-heroku-memcacheify==0.3
 django-jenkins==0.13.0
 django-pipeline==1.2.21
