--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ greenlet==0.4.0
 gunicorn==0.15.0
 logilab-astng==0.24.1
 logilab-common==0.58.3
+mock==1.0.1
 newrelic==1.8.0.13
 paramiko==1.9.0
 pep8==1.3.3
